# harbour-slackfish

./: .gitignore  CMakeLists.txt  harbour-slackfish.pro
CMakeMod/: FindSailfishApp.cmake
src/: slackclient.cpp
translations/: harbour-slackfish-cs.ts
